--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 		<module>hateoas</module>
 	</modules>
 
+	<!--<properties>
+		&lt;!&ndash; The main class to start by executing java -jar &ndash;&gt;
+		<start-class>bookmarks.Application</start-class>
+	</properties>-->
+
 	<dependencies>
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
@@ -55,6 +60,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+        <start-class>bookmarks.Application</start-class>
 	</properties>
 	<repositories>
 		<repository>
