--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,12 +8,12 @@ sonar.projectVersion=1.0
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-sonar.sources=app
-Ssonar.tests=test
+#sonar.sources=src/main/java
+#Ssonar.tests=src/main/test
 
 #sonar.java.coveragePlugin=jacoco
 #sonar.junit.reportsPath=target/test-reports
-#sonar.surefire.reportsPath=target/test-reports
+sonar.surefire.reportsPath=target/surefire-reports
 #sonar.genericcoverage.reportPaths=target/test-reports/ApplicationTest.xml
 
 # Encoding of the source code. Default is default system encoding
