Fixing the path to the surefire reports XML

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,10 @@ sonar.sources=rest/src/main/java/bookmarks
 sonar.tests=rest/src/test/java/bookmarks
 
 #sonar.java.coveragePlugin=jacoco
-#sonar.junit.reportsPath=target/test-reports
-sonar.surefire.reportsPath=rest/target/surefire-reports
+sonar.language=java
+sonar.junit.reportsPath=/hateoas/target/surefire-reports/
+
+sonar.surefire.reportsPath=/hateoas/target/surefire-reports/
 #sonar.genericcoverage.reportPaths=target/test-reports/ApplicationTest.xml
 
 # Encoding of the source code. Default is default system encoding
